2015-08-27 S. Thiell <sthiell@stanford.edu>

	* NodeUtils.py: add support for built-in groups definition files based on
	YAML. Added autodir configuration option in groups.conf to declare a
	directory where .yaml files are automatically loaded. Example available in
	groups.d/cluster.yaml.example. Added support for groups.conf section with
	multiple source names separated by comma. This is also the case for
	groups.conf.d/*.conf extensions. Also added new upcall command $SOURCE
	variable that is replaced by calling source name before execution.
	Finally, /etc/clustershell/groups is now deprecated and replaced by
	/etc/clustershell/groups.d/local.cfg for new installation (ticket #258).

2015-07-07 S. Thiell <sthiell@stanford.edu>

	* CLI/Nodeset.py: add --autostep=auto and --autostep=x% option (#161).

	* NodeSet: add autostep property to allow changing the way every RangeSet of
	a NodeSet object is displayed (eg. node[2-8/2] instead of node[2,4,6,8]).
	Autostep value is the min number of indexes that are found at equal distance
	of each other inside a range before NodeSet starts to use this syntax.

2015-05-18 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.6.92 released.

2015-04-10 S. Thiell <stephane.thiell@cea.fr>

	* Tree: implement task.copy() in tree mode using temporary tar file.

2015-04-01 S. Thiell <stephane.thiell@cea.fr>

	* Tree: allow local command execution on gateways by adding remote=False to
	task.shell()/run().  In practice with this patch, we can now easily
	execute local commands on (remote) gateways using node argument like
	`ipmitool -H %h` to spread the load between gateways.

2015-03-24 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: disallow opening bracket after digit (ticket #228).

2015-03-23 S. Thiell <stephane.thiell@cea.fr>

	* Clush.py: Warn user of possible use of shell globbing, especially when
	using brackets and bash without GLOBIGNORE set (ticket #225).
	* Clush.py: Fix --diff against null content (ticket #214).
