@@ -253,14 +253,18 @@ class OptionParser(optparse.OptionParser):
                           default=False, help="fold nodeset(s) (or separate "
                                               "nodes) into one nodeset")
         optgrp.add_option("-l", "--list", action="count", dest="list",
+                          default=False, help="list node groups from one "
+                                              "source (see -s GROUPSOURCE)")
+        optgrp.add_option("-L", "--list-all", action="count", dest="listall",
                           default=False,
-                          help="list node groups (see -s GROUPSOURCE)")
+                          help="list node groups from all group sources")
         optgrp.add_option("-r", "--regroup", action="store_true",
                           dest="regroup", default=False,
                           help="fold nodes using node groups (see -s "
                                "GROUPSOURCE)")
-        optgrp.add_option("--groupsources", action="store_true",
-                          dest="groupsources", default=False,
+        optgrp.add_option("--list-sources", "--groupsources",
+                          action="store_true", dest="groupsources",
+                          default=False,
                           help="list all active group sources (see "
                                "groups.conf(5))")
         self.add_option_group(optgrp)
